<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/squareSize"
        android:text="@string/squareLabel8"
        android:gravity="center"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/squareSize"
        android:text="@string/squareLabel7"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/squareSize"
        android:text="@string/squareLabel6"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/squareSize"
        android:text="@string/squareLabel5"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/squareSize"
        android:text="@string/squareLabel4"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/squareSize"
        android:text="@string/squareLabel3"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/squareSize"
        android:text="@string/squareLabel2"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/squareSize"
        android:text="@string/squareLabel1"
        android:gravity="center"
        android:layout_gravity="center"/>
</LinearLayout>