<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="@dimen/squareSize"
        android:layout_height="wrap_content"
        android:text="@string/squareLabelA"
        android:gravity="center"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="@dimen/squareSize"
        android:layout_height="wrap_content"
        android:text="@string/squareLabelB"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="@dimen/squareSize"
        android:layout_height="wrap_content"
        android:text="@string/squareLabelC"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="@dimen/squareSize"
        android:layout_height="wrap_content"
        android:text="@string/squareLabelD"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="@dimen/squareSize"
        android:layout_height="wrap_content"
        android:text="@string/squareLabelE"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="@dimen/squareSize"
        android:layout_height="wrap_content"
        android:text="@string/squareLabelF"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="@dimen/squareSize"
        android:layout_height="wrap_content"
        android:text="@string/squareLabelG"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="@dimen/squareSize"
        android:layout_height="wrap_content"
        android:text="@string/squareLabelH"
        android:gravity="center"
        android:layout_gravity="center"/>
</LinearLayout>